--- a/PROJECT/package.json
+++ b/PROJECT/package.json
@@ -12,13 +12,17 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.7.9",
         "concurrently": "^9.0.1",
+        "eslint": "^9.20.1",
+        "eslint-plugin-vue": "^9.32.0",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.31",
+        "prettier": "^3.5.1",
         "tailwindcss": "^3.2.1",
         "vite": "^6.1.0",
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "router": "^1.3.8"
+        "router": "^1.3.8",
+        "unplugin-vue-components": "^28.1.0"
     }
 }
